--- a/microchess/package.json
+++ b/microchess/package.json
@@ -13,7 +13,7 @@
     "winston"
   ],
   "author": "universalbit-dev",
-  "license": "MIT",
+  "license": "BSD-2-Clause",
   "dependencies": {
     "dotenv": "^17.2.1",
     "node-fetch": "^3.3.2",
