--- a/microchess/.env
+++ b/microchess/.env
@@ -1,4 +1,5 @@
 # Time interval (in milliseconds) between random game generations/uploads
+MICROCHESS_GENERATOR_INTERVAL=3600000
 MICROCHESS_INTERVAL=3600000
 
 # Your jsonbin.io API Access Key
