--- a/.github/workflows/auto-sync.yml
+++ b/.github/workflows/auto-sync.yml
@@ -30,6 +30,6 @@ jobs:
 
       - name: Push changes
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.AUTO_SYNC }}
         run: |
-          git push origin master
+          git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }} master
